@@ -54,6 +54,8 @@ VERSION 2.3.1-Beta 1
        some MySQL versions. (BR 225052)
 
   BUGFIXES:
+     * Fixed the double delete confirmation dialog when organizing tracks.
+      (BR 233200)
      * Fixed broken rendering of ratings in Current Track applet on startup.
      * Fixed command type names shown in the Bookmark Manager not being translated.
        (BR 226829)
